[gd_scene load_steps=4 format=3 uid="uid://bu6w2c4wk28yu"]

[ext_resource type="Script" uid="uid://cu6t460kqugrg" path="res://objects/rail_object/rail_object_control.gd" id="1_bl13x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ruxw6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2246"]

[node name="RailObject" type="Node2D"]
script = ExtResource("1_bl13x")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
scale = Vector2(25, 0.1)
shape = SubResource("RectangleShape2D_ruxw6")
disabled = true

[node name="RailObjectRigidBody2D" type="RigidBody2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RailObjectRigidBody2D"]
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_t2246")

[node name="RailObjectSprite2D" type="Sprite2D" parent="RailObjectRigidBody2D"]
unique_name_in_owner = true

[node name="RailObjectGrooveJoint2D" type="GrooveJoint2D" parent="."]
unique_name_in_owner = true
position = Vector2(250, 0)
rotation = 1.5707964
node_a = NodePath("../StaticBody2D")
node_b = NodePath("../RailObjectRigidBody2D")
length = 500.0
initial_offset = 250.0
